# SwordGL

./: .gitmodules  CMakeLists.txt  README.md
dependencies/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
dependencies/imgui/backends/: imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h
res/shaders/: particle.frag  particle.vert  shader.frag
src/: Application.cpp  main.cc
src/core/: sword_app.cc  sword_app.h  utils.h
src/graphics/: UI.cc  UI.h  gpu_context.cc  gpu_context.h  particle_system.cc  particle_system.h  renderer.cc  renderer.h
src/graphics/render_passes/: copy_pass.h  imgui_pass.h  present_pass.h  render_pass.h  render_passes.h
src/scenes/: scene.h
